# asterkv

./: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md
apps/astercli/: CMakeLists.txt  main.cpp
apps/asterctl/: CMakeLists.txt  main.cpp
apps/asterd/: CMakeLists.txt  main.cpp
cmake/: AsterKVCompilerOptions.cmake
docs/: README.md
docs/architecture/: STRUCTURE.md  cli-local-mode.md  command-dispatcher.md  command-model.md  core-status-result.md  local-pipeline.md  protocol-parser.md  response-serialization.md  server-local-stdin-mode.md  storage-foundation.md
docs/decisions/: 0001-project-bootstrap.md  0002-coding-and-repository-conventions.md  0003-versioning-and-release-policy.md  0004-core-status-result-model.md  0005-command-model-foundation.md  0006-protocol-parser-foundation.md  0007-in-memory-storage-foundation.md  0008-command-dispatcher-foundation.md  0009-response-serialization-foundation.md  0010-local-pipeline-foundation.md  0011-cli-local-execution-mode.md  0012-server-local-stdin-mode.md
docs/development/: coding-style.md  dependencies.md  git-workflow.md
docs/releases/: VERSIONING.md  release-process.md
include/asterkv/command/: command.h
include/asterkv/core/: result.h  status.h  version.h
include/asterkv/execution/: command_dispatcher.h  command_response.h
include/asterkv/pipeline/: local_pipeline.h
include/asterkv/protocol/: parser.h  response_serializer.h
include/asterkv/storage/: in_memory_storage.h  storage_engine.h
src/command/: CMakeLists.txt  command.cpp
src/core/: CMakeLists.txt  status.cpp  version.cpp
src/execution/: CMakeLists.txt  command_dispatcher.cpp  command_response.cpp
src/pipeline/: CMakeLists.txt  local_pipeline.cpp
src/protocol/: CMakeLists.txt  parser.cpp  response_serializer.cpp
src/storage/: CMakeLists.txt  in_memory_storage.cpp
tests/: CMakeLists.txt
tests/command/: CMakeLists.txt  command_model_test.cpp
tests/core/: CMakeLists.txt  status_result_test.cpp
tests/execution/: CMakeLists.txt  command_dispatcher_test.cpp
tests/headers/: CMakeLists.txt  public_headers_test.cpp
tests/pipeline/: CMakeLists.txt  local_pipeline_test.cpp
tests/protocol/: CMakeLists.txt  protocol_parser_test.cpp  response_serializer_test.cpp
tests/storage/: CMakeLists.txt  in_memory_storage_test.cpp
